<resources>
    <string name="app_name">#iwashere</string>
    <string name="versionCode">0.4</string>
    <string name="versionName">0.4-Beta</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">#iwashere</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_link_to_register">Not a member? Get registered in #iwashere now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_firstname">Name</string>

    <string name="facebook_app_id">1835727553359465</string>
    <string name="fb_login_protocol_scheme">fb1835727553359465</string>
    <string name="title_activity_google">Google Sign in</string>
    <string name="title_activity_facebook">Facebook Sign in</string>
    <string name="or">or</string>
    <string name="log_in_with">Log in with</string>
    <string name="register_with">Register with</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="register_with_google">Register with Google</string>
    <string name="iwashere_icon">iwashere icon</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="user_id">User ID:</string>
    <string name="user_email">User email:</string>
    <string name="wait">Wait a moment</string>
    <string name="menu_map">Map</string>
    <string name="menu_person">Account</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_poi_detail">POI</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="version">Version:</string>
    <string name="title_activity_about">About</string>
    <string name="error_fetch">Error fetching data</string>
    <string name="error_connection">Failed connection!</string>
    <string name="address">Address</string>
    <string name="search_hint_text">Search for locations, routes, tags...</string>
    <string name="action_settings">Settings</string>
    <string name="default_pontuation_poi">x/5</string>
    <string name="more_info">More info</string>
    <string name="less_info">Less info</string>
    <string name="error_request">Error sending request</string>
    <string name="error_weak_password">Weak Password</string>
    <string name="error_user_exists">Email is taken</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="hello_world_account">Hello World: Account</string>
    <string name="description">Description</string>
    <string name="title_activity_route_detail">Route</string>
    <string name="vote_sent">Success! Vote sent.</string>
    <string name="poi_list">List of Points</string>
    <string name="no_description">No description available!</string>
    <string name="video">Video</string>
    <string name="picture">Picture</string>
    <string name="gallery">Gallery</string>
    <string name="beta_message">We\'re sorry, but this is still a beta! Coming soon</string>
    <string name="photo_fail_msg">Failed to open camera!</string>
    <string name="post_uploaded">Post uploaded successfuly</string>
    <string name="post_upload_failed">Error uploading the post</string>
    <string name="video_beta_message">We\'re sorry, but this is still a bet and uploading video is still not working :(</string>
    <string name="start_uploading">Uploaded started</string>
    <string name="is_uploading">Post is uploading</string>
</resources>
