<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:icon="@drawable/ic_pound"
        android:title="@string/menu_feed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_camera"
        android:enabled="true"
        android:icon="@drawable/ic_camera"
        android:title="@string/menu_camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_account_settings"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_person"
        app:showAsAction="ifRoom" />
</menu>